2007-01-29  David Schleef  <ds@schleef.org>

	* gst/typefind/gsttypefindfunctions.c:
	  Detect BBCD as video/x-dirac, so we can play raw dirac
	  streams.

2007-01-29  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/theora/theoraenc.c: (theora_enc_chain):
	  Check return value of theora_encode_header(), or we might try to
	  allocate a random number of bytes. theora_encode_header() can fail
	  if libtheora has been compiled with encoding support disabled.
	  Fixes #398110.

2007-01-29  Wim Taymans  <wim@fluendo.com>

	* tests/check/gst/.cvsignore:
	Do as buildbot says.

2007-01-29  Wim Taymans  <wim@fluendo.com>

	* ext/libvisual/visual.c: (gst_visual_src_setcaps):
	Fix strides in libvisual. Gst uses X strides.
	Inspired by: <ed at catmur dot co dot uk> and 
	<tim at centricular dot net>
	Fixes #401118.

2007-01-27  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_submit_buffer),
	(gst_ogg_demux_get_data), (gst_ogg_demux_get_next_page),
	(gst_ogg_demux_get_prev_page), (gst_ogg_demux_do_seek),
	(gst_ogg_demux_perform_seek),
	(gst_ogg_demux_bisect_forward_serialno),
	(gst_ogg_demux_read_chain), (gst_ogg_demux_read_end_chain),
	(gst_ogg_demux_find_chains), (gst_ogg_demux_handle_page),
	(gst_ogg_demux_chain), (gst_ogg_demux_combine_flows),
	(gst_ogg_demux_loop_reverse), (gst_ogg_demux_loop):
	* ext/ogg/gstoggdemux.h:
	Properly propagate streaming errors when we are scanning the file for
	chains so that we don't crash when shut down. Might fix some crashers
	when quickly switching oggs in RB such as #332503 and #378436.

2007-01-26  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/gnomevfs/gstgnomevfssrc.c: (gst_gnome_vfs_src_start):
	  Map a gnome-vfs HOST_NOT_FOUND error into a GStreamer NOT_FOUND
	  error code as well.

2007-01-25  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybasebin.c: (remove_source):
	Don't try to disconnect a signal from a finalized object.
