@@ -1,3 +1,8 @@
+2007-01-30  Wim Taymans  <wim@fluendo.com>
+
+	* gst/audioconvert/gstaudioconvert.c:
+	Don't fail on 0 sized buffers. Fixes #396835.
+
 2007-01-29  David Schleef  <ds@schleef.org>
 
 	* gst/typefind/gsttypefindfunctions.c:
